# SpokaneTechWeb

./: .dockerignore  .gitignore  README.md  pyproject.toml
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  PRIVACY_POLICY.md  PULL_REQUEST_TEMPLATE.md  STYLE_GUIDE.md  TERMS_OF_SERVICE.md
.github/ISSUE_TEMPLATE/: bug_report.yaml  feature_request.yaml  question.yaml
.github/hooks/: pre-commit
.github/workflows/: bandit.yaml  build_and_publish_docker.yaml  django.yaml  fawltydeps.yaml  isort.yaml  mypy.yaml  pytest.yaml  radon.yaml  ruff_format.yaml  ruff_lint.yaml
src/django_project/: entrypoint.sh  flower_config.py
src/django_project/blogs/: admin.py  apps.py  models.py  urls.py  views.py
src/django_project/blogs/migrations/: 0001_initial.py  0002_blogtag_blogpost_tags.py
src/django_project/blogs/scripts/: initialize_blogs.py
src/django_project/blogs/templates/blogs/partials/list/: blog_posts.htm
src/django_project/core/: asgi.py  celery.py  middleware.py  settings.py  urls.py  views.py  wsgi.py
src/django_project/core/static/spokanetech/css/: index-styles.css  spokanetech.css  spokanetech.css.map  spokanetech.scss
src/django_project/core/static/spokanetech/js/: bgicons.js
src/django_project/core/templates/: base.htm
src/django_project/core/templates/core/: host_info.html
src/django_project/members/: adapters.py  admin.py  apps.py  forms.py  models.py  signals.py  tasks.py  urls.py  views.py
src/django_project/members/migrations/: 0001_initial.py  0002_member_title.py
src/django_project/members/scripts/: initialize_member_data.py
src/django_project/members/templates/members/full/custom/: login.html  stats.html
src/django_project/members/templates/members/full/detail/: member.html
src/django_project/members/templates/members/full/list/: members.html
src/django_project/members/templates/members/partials/: member_interests.htm  member_skills.htm
src/django_project/members/templates/members/partials/charts/: stats_by_career_level.htm  stats_by_skill.htm
src/django_project/members/templates/members/partials/custom/: login.htm  stats.htm
src/django_project/members/templates/members/partials/detail/: member.htm
src/django_project/members/templates/members/partials/table/: members.htm
src/django_project/tests/unit/blogs/: test_model_crud.py  test_model_methods.py  test_views.py
src/django_project/tests/unit/core/: test_celery_config.py
src/django_project/tests/unit/core/views/: test_views.py
src/django_project/tests/unit/web/: test_linkedin_notifier.py  test_linkedin_oauth_command.py  test_model_crud.py  test_model_methods.py  test_views.py
src/django_project/web/: admin.py  admin_views.py  apps.py  forms.py  models.py  signals.py  tasks.py  urls.py  views.py
src/django_project/web/management/commands/: linkedin_oauth.py
src/django_project/web/migrations/: 0001_initial.py  0002_alter_event_options.py  0003_alter_event_options_techgroup_discord_webhook_url.py  0004_alter_event_end_datetime.py  0005_alter_event_location_fields_nullable.py  0006_integrationcredential.py
src/django_project/web/scripts/: _post_to_facebook.py  generate_dev_data.py  ingest_events.py  initialize_data.py  notify_events.py  post_socials.py  post_to_facebook.py
src/django_project/web/templates/web/admin/: facebook_post.html
src/django_project/web/templates/web/full/custom/: about.html  calendar.html  develop.html  index.html
src/django_project/web/templates/web/full/detail/: event.html  group.html
src/django_project/web/templates/web/full/list/: events.html  groups.html
src/django_project/web/templates/web/partials/custom/: about.htm  calendar.htm  calendar_mobile.htm  develop.htm  index.htm
src/django_project/web/templates/web/partials/detail/: event.htm  group.htm
src/django_project/web/templates/web/partials/li/: events.htm
src/django_project/web/templates/web/partials/list/: events.htm  groups.htm  wrapper_list.htm
src/django_project/web/templates/web/partials/marquee/: events.htm  groups.htm
src/django_project/web/templates/web/partials/modal/: event_information.htm  event_information_modal.htm  group_information.htm
src/django_project/web/utilities/: dt_utils.py  html_utils.py
src/django_project/web/utilities/ai/: gemini.py  prompts.py
src/django_project/web/utilities/notifiers/: discord.py  facebook.py  linkedin.py
src/django_project/web/utilities/scrapers/: eventbrite.py  meetup.py
src/docker/: .env.compose  Dockerfile  docker-compose.yaml  nginx.Dockerfile  nginx.conf
src/envs/: .env.template  .env.test
